# test_HQ

./: .pre-commit-config.yaml  Makefile  README.md  manage.py  pyproject.toml  setup.cfg
clients/: admin.py  models.py  signals.py  views.py
clients/templates/: form.html
products/: admin.py  distributor.py  models.py  permissions.py  serializers.py  signals.py  support_funcs.py  views.py
test_HQ/: asgi.py  settings.py  urls.py  wsgi.py
